<resources>
    <string name="ads_app_id">ca-app-pub-1606200483291446~9270651913</string>
    <string name="ads_banner_id">ca-app-pub-1606200483291446/4018325239</string>
    <string name="ads_inst_id">ca-app-pub-1606200483291446/6867849853</string>
    <string name="app_name">AmmaiBabai</string>
    <string name="app_name1">අම්මයි බබයි</string>
    <string name="aluth">අලුත් දැනුම</string>
    <string name="heade0">අලුත්</string>
    <string name="heade1">දරුවාගේ පෝෂණය​</string>
    <string name="heade2">ළමා සංවර්ධනය</string>
    <string name="heade3">ළමා සෙෳ‍‍ඛ්‍ය</string>
    <string name="heade4">අනතුරු හා ප්‍රථමාධාර​</string>
    <string name="heade5">පවුල් සෙෳ‍‍ඛ්‍ය</string>
    <string name="heade6">නැලවිලි ගී</string>
    <string name="action_close">Close</string>
    <string name="err404">Requested resource not found</string>
    <string name="err500">Something went wrong at server end</string>
    <string name="err401">Authentication Failed!</string>
    <string name="err_other">Device not connected to Internet!</string>
    <string name="heade1_1">මව් කිරි පිළිබදව​​</string>
    <string name="heade1_2">මව්කිරි ලබන දරුවන්ගේ බුද්ධිමත්භාවය​</string>
    <string name="heade1_3">ළදරුවාට අතිරේක ආහාර ලබාදීම </string>
    <string name="heade1_4">ඔබේ දරුවට සුදුසු පරිදි අහාර දෙන්න​</string>
    <string name="heade1_5">දරුවාට බිත්තර දිය යුතු හැටි​</string>
    <string name="heade1_6">බබාට අවශ්‍ය යකඩ සැපයෙන හැටි​</string>
    <string name="heade1_7">පැණි රස කෑමද? පලතුරු ද?​</string>
    <string name="heade1_8">තවදුරටත් දරුවාට මව්කිරි දෙන්න​</string>
    <string name="heade2_1">වැඩෙන වග බිළින්දා මනින මග​​</string>
    <string name="heade2_2">ඔබේ දරුවා වැඩෙන හැටි​</string>
    <string name="heade2_3">දරුවාගේ උස වැඩි වෙන හැටි</string>
    <string name="heade2_4">ළදරුවාගේ වර්ධනය නිසි ලෙස සිදුවිමට නම් ඔබ කළ යුතු දේ</string>
    <string name="heade2_5">දැන් දත් එනවද?​</string>
    <string name="heade2_6">දරුවා හා සමාජය</string>
    <string name="heade2_7">සෙල්ලම් බඩු</string>
    <string name="heade2_1para1">ඔබේ දරුවාට - දරුවා උපන් රෝහලේ දී හෝ සායනයේදී හෝ නිවසට පැමිණි පවූල් සෞඛ්‍ය සේවා නිලධාරිනියකගෙන් හෝ නොවැරදීම ලැබෙන කාඩ් පතක් ඇත.එය දරුවාගේ සෞඛ්‍ය වරදාන සටහන නම් කාඩ් පතක්.මෙම කාඩ් පත එතරම් වැදගත්කොට සමහර විට ඔබ නොදකින්නට ඇත.එහෙත් එහි ඇති සෞඛ්‍යමය වශයෙන් වැදගත් තොරතුරු වලට අමතරව එමගින් ඉතා සුවිශේෂ වූ කාර්යයක් ඉටු වේ.එනම් ඔබේ දරුවාගේ කායික හා මානසික වර්ධනය මැනගැනීමට අවස්ථාව සලසා දීම මෙමගින් සිදුවේ.\n​​</string>
    <string name="heade2_1para2">උපන්දා සිට අවුරුදු 5ක් තරම පිරෙන කාලය තුල දරුවාගේ කායික සහ මානසික වර්ධනය ඔහුගේ ජිවිතයේ නීරොගී බව කෙරෙහී බෙහෙවින් බලපාන බව පිලිගැනෙයි.මෙම වැඩීම පිලිබදවත් වෙනත් අදාල කරුනු පිලිබදව සවිස්තරව කරුණු දක්වන වාර්ථාවක් ලෙස සෞඛ්‍ය වර්ධන සටහන දැක්විය හැක.\n\n</string>
    <string name="heade2_1para3">ශ්‍රි ලංකාවේ උපදින දරුවකුගේ සාමාන්‍ය බර කිලො ග්‍රෑම් 2.5 - 3.0 ක් අතර වේ.උපතින් පසු නිසි පරිදි මව් කිරි සහ අතිරේක පොෂණ සැපයෙන්නේ නම්,දරුවාට මාස 4 - 5 අතර දි උපත් බර දෙගුන විමක් ද,මාස 12 පිරෙන විට තෙගුන වීමක් ද දැකීමට පුලුවන.දල වශයෙන් කිවහොත් පලමු වසරේදි දරුවෙකුගේ බර කිලො ග්‍රෑම් 5.0 - 6.5 කින් ඉහල යෑමක් ද ඊලග වසර වලදී කිලො ග්‍රෑම් 2.0 - 2.5 කින් ඉහල යාමක් ද අපේක්‍ෂා කල හැකිය.\n\n</string>
    <string name="heade2_1para4">දරුවගේ බර ඉහල යාම දරුවෙකු නීරෝගිව හා නිසි ලෙස වැඩෙන බව දැන ගැනීමට ඇති හොදම මගයි.දරුවාගේ වැඩීම සලකුනු කල යුතු ප්‍රස්ථාරයක් වර්ධන සටහනේ ඇත.දරුවගේ බර සෑම මසකටම වරක් කිරා මෙහි සටහන් කිරිම ඉතාමත්ම අවශ්‍ය දෙයකි.\n\n</string>
    <string name="heade2_1para5">මෙම බර සටහන් කරන ප්‍රස්ථාරයෙහි කලු සහ රතු ඉරි දෙකක් දැකිය හැක.වඩා සතුටු දායක වර්ධනයක් අති දරුවාගේ බර වැඩි වීම කලු ඉරට ආසන්නව හෝ ඊට ඉහලින් දකිය හැක.රතු ඉරට ආසන්නව බර වැඩි වීමක් දක්වන්නේ නීරොගී ලමයින් අතරින් ඉතා ටික දෙනෙකු පමනයි.එහෙත් වැදගත්ම දෙය මෙම කලු ඉර හෝ රතු ඉර නොව,ඔබෙ දරුවාගේ මසකට වරක් බැගින් බර කිරා,සටහනේ ප්‍රස්ථාරයේ ලකුණු කර එම තිත් යා කිරීම මගින් ලැබෙන ඔබේ දරුවාගෙ බර වෙනස් වන හෙවත් වර්ධනය පෙන්වන ඉරයි.මෙම ඉර සටහනේ ඇති කලු හා රතු ඉරි මෙන් මාසයෙන් මාසයට ඉහලට ඇදෙන්නේ නම් දරුවගේ වැඩිම පිලිබද ඔබට සෑහිමට පත් විය හැක.\n\n</string>
    <string name="heade2_1para6">යම් ලෙසකින් එක් මාසයක බර තිබු තැනක වඩා පහලට ඊලග මාසයේදී බර වෙනස් වන ඉර ඇදුනහොත් හෝ එම ඉර එකම මට්ටමක පැවතුනහොත් හෝ එසේ වීමට හේතුව සොයා බැලිමට සිදුවේ.වෙනත් ලෙසකින් කිවහොත් වර්ධන දක්වන ඉර සටහනේ කොතැන තිබුනත් දරුවාගේ බර කලින් මසයට වඩා වැඩි විය යුතුය.එසේ නැතිව කලින් මාසයට වඩා අඩු බරක් හෝ සමාන බරක් මේ මාසයේදී ඇත්නම් එ ගැන විමසිය යුතුය.\n\n</string>
    <string name="heade2_1para7">සමහර විට එසේ වීමට හේතුව :\n</string>
    <string name="heade2_1para8">•	දරුවාට එම මාසයේදී පාචනය හෝ වෙනත් බොවන ලෙඩක් සෑදී තිබීම.\n
                                 •	මව් කිරි දීම නැවැත්වීම හෝ මව් කිරි මදි වීම.\n
                                 •	මාස 4 - 6 කාලයේදී දරුවාට අවශ්‍ය අතිරේක අහාර ලබා නොදීම.\n
                                 •	අමතර ආහාර පෝශ්‍ය ගුණයන් හා අවශ්‍ය ප්‍රමණයෙන් නොවීම.\n
                                 •	මව දරුවාගෙන් ඈත් වීම ( රැකියවට යාම වැනි ).\n\n</string>
    <string name="heade2_1para9">එසේ සොයා ගත් හේතුව අනුව වහා ක්‍රියා කලහොත් දරුවාගේ වර්ධනය යලි යතා තත්වයට පත් කල හැක.විශේෂයෙන්ම රෝගි තත්වයක් නිසා බර වැඩි වීම ඇන හිටි දරුවෙකුට ලබාදෙන අහාර මඳ වශයෙන් වත් වැඩි කල යුතුය.අහාර වේල් ගණනද වැඩි කල යුතුය.එමගින් රෝගී තත්වය නිසා වැය වු ශක්තිය හා පෝ‍‍ෂ‍ය පදාර්ථ දරුවාට යලි ලබා දීමට හැකි වේ.\n\n</string>
    <string name="heade2_1para10">රෝගී සමයේදී වුව ද දරුවට පුරුදු - කැමති අහාර ස්වල්ප වශයෙන් හෝ වරින් වර දෙන්න.පහසුවෙන් දිරවන විශේෂයෙන් දියරමය ආහාර මෙහිදි වඩාත් සුදුසුය.
මාස 4 - 6 සිට මව් කිරි වලට අතිරේකව අමතර ආහාර දෙන්න .බත් කැඳ,පියළි ඇට,ධාන්‍ය,මස් මාලු,එලවලු,ඉඳුණු පලතුරු ආහාරයට සුදුසු වශයෙන් එක් කිරීම දරුවාට අවශ්‍ය පෝශ්‍ය ප්‍රධාර්ථ සැපයිමට හේතු වේ.ක්‍රමයෙන් තෙල් හා මේද ස්වල්පයක්ද අහාරයට එකතු කිරීමෙන් දරුවාට අවශ්‍ය ශක්තිය සැපයෙහි.අමතර ආහාර පිරිසිදුව සකස් කිරිමටත් ,පිලියෙල කල ආහාර ඉක්මනින් දරුවාට ලබා දිමත් මතක තබා ගන්න.
.</string>
    <string name="heade2_1para11">ඔබේ දරුවාගේ වර්ධන සටහනේ බර වැඩිවීම ලකුණු කිරීමට අමතරව එන්නත් ලබා දෙන දින දැක්විමට මෙන්ම වැඩීම පිලිබද පියවරද තවත් සෞඛ්‍ය තොරතුරු ද දැක්වේ.දරුවාගේ සෞඛ්‍ය වර්ධන සටහන,වේලපත්කඩය (කේන්දරය )තරම්ම ප්‍රොයොජනවත් දෙයකි.එය දරුවාගේ වර්ධනය පෙන්වන කැඩ පත නිසා සුරක්ශිතව පරිහරණය කරන්න.\n\n</string>
    <string name="heade2_2para1">එක් එක් දරුවා වැඩෙන්නේ තමන්ට ආවේනික,විශේෂිත වු වේගය කිනි.මේ නිසාම එක් දරුවෙකුගේ වර්ධන හැකියාවන් ( නැකිටීම,ඇවිදීම වැනි ) සම වයසේ තවත් දරුවෙකු වෙතින් පල නොවීම ගැන කලබල විය යුතු නැත.කෙසේ වෙතත් බොහෝ දරුවන් අල්ලා කල සමීක්ශණ තුලින් ඒ ඒ වර්ධන පියවර පිලිබඳව දල සැකසුමක් වෙයි.කිසියම් දරුවෙකු වෙනුවෙන් මේ අවස්ථා සුලු වශයෙන් එහා මෙහා වීම සැලකිය යුතු තරම් නොව්නත්,විශාල වෙනසක් දක්වන්නේ නම් වර්ධනයේ කිසියම් අඩුවක් අගවන බව සැක කල හැකිය.\n</string>
    <string name="heade2_2para2">වයස මාස 18 දක්වා.සාමාන්‍යයෙන් දරුවෙකු පසු කරන වර්ධනය ( මිමි )මෙසේය.\n</string>
    <string name="heade2_2para3"><b>මාස 1 – 2 </b>\n
        *	දවසේ පැය 24 න් වැඩි වෙලාවක් නිදියයි.\n
*	අත් පා සොලවයි.\n
*	අතට දෙන යමක් අල්ලා ගැනීමට හැකිවෙයි.\n
*	වැතිරී සිටියදී හිස මදක් එස විමට සමත් වෙයි.\n
</string>
    <string name="heade2_2para4"><b>සති 6 – 8</b> \n*	මව සමග සිනාසෙයි.\n
*දීප්තිමත් අලෝකයක් නෙත ගැටුනු විට ඇස් ඒ අනුගමනය කරයි.\n</string>
    <string name="heade2_2para5"><b>මාස 3 – 4</b> \n
        *හිස කෙලින් තබා ගැනීමට තරම් හයියක් ලබයි.\n
*තොටිල්ල හෝ ඇද මත පෙරලෙන්නට උත්සහ කරයි.\n
*චලනය වන දෙය ඔස්සෙ ඇස් යවයි.\n
*සිය දෙඅත් සමග සෙල්ලම් කරයි.\n
*සිනා සෙයි,හඩ නගයි.\n
*මව හදුනා ගැනීමට සමත් වෙයි.\n
</string>
    <string name="header2_61">වතුර වලින් පමණක් නොව දරුවා වචන වලින්ද නහවන්න</string>
    <string name="header2_62">සම්බන්ධතාව දරුවාට අවශ්‍ය ඇයි?</string>
    <string name="header2_63">දරුවාට ආදරය හා පිළිගැනීම අවශ්‍යයි.</string>
    <string name="header2_64">පුංචි දරුවාට පුංචි කතන්දර</string>
    <string name="heade3_15">බඩේ රිදීම  - රෝගය හදුනා ගන්න උදව්වක්</string>
    <string name="para3_15_1">බඩේ රිදෙන තැන - ප්‍රදේශය සහ රිදෙන ආකාරය අනුව ඒ කවර අන්දමක බඩේ අමාරුවක් දැයි යම් ඉගියක් ලද හැකිවෙයි.එහෙත් මතක තබා ගත යුතුය මෙය රෝග විනිච්චයක් නොව රෝගය ගැන සැක කිරීමක් පමණි.</string>
    <string name="para3_15_3">ඇපෙන්ඩිසයිට්ස් (උණ්ඩුක පුච්ජ ප්‍රදාහය)</string>
    <string name="para3_15_4">බඩේ මැද ප්‍රදේශයේ වේදනාව මුලින්ම හට ගනී.එය පහල වම් පෙදෙසේ විහිදිය හැකිය.වැසිකිලි යාමත් සමග යම් සහනයක් සැලසෙයි.වේදනාව වරින් වර මතු වී යයි.</string>
    <string name="para3_15_5">ඔසප් වේදනාව</string>
    <string name="para3_15_6">බඩේ පහල ප්‍රදේශ පුරා විහිදී යන වේදනාව කි.සමහර විට පිටුපසට හා කලව දෙසට වේදනාව පැතිර යයි.</string>
    <string name="para3_15_7">මුත්‍රා අසාදනය</string>
    <string name="para3_15_8">බඩේ පැතිවලින් ඇරබෙන වේදනාව පිටුපස සහ ලින්ගේන්ද්‍රය දෙසට විහිදෙයි.මුත්‍රා කිරීමේදී දැවිල්ල සහ වේදනාව දැනීම උණ ද ඒ රෝග ලක්ෂණ අතර වේ.</string>
    <string name="para3_15_9">සෙන්ගමාලය</string>
    <string name="para3_15_10">බඩේ ඉහල දකුණු පෙදෙස් ( පපු ඇටයට යටින් ) වේදනාව, උණ ගැනීමකදී වැනි ලක්ෂණ විඩා ගතිය මුත්‍රා කහ - දුබුරු පැහැ වීම.ඇස් සම ආදිය කහ පැහැ වීම .මළ කළු පැහැ වීම.</string>
    <string name="para3_15_11">ආමාශ වණ සහ අම්ල ගති </string>
    <string name="para3_15_12">බඩේ ඉහල ප්‍රදේශයේ වේදනාව සහ දැවිල්ල ආහාර ගැනීමට පෙර( බඩ හිස්ව තිබෙන විට ) වේදනාව ඇති කරයි.ආහාර ගැනීම,කිරි බිම හා ප්‍රතිආම්ලික ඖෂධ ගැනීම මගින් සහනය සැලසේ.</string>
    <string name="para3_15_13">පිත්තාශයේ ගල්</string>
    <string name="para3_15_14">හදිස්සියේ බඩේ ඉහල දකුණු කොටසේ ඇති වන වේදනාව බොහෝ විට තෙල් හෝ මේදය හෝ බහුල අහාර වේලකට පසුව ඇති වේ.</string>
    <string name="para3_15_15">මළ බද්ධය</string>
    <string name="para3_15_16">බඩේ සෑම පෙදෙසකටම විහිදෙන දරුණු වේදනාව.සමහර විට වම් පෙත්තේ වේදනාව වැඩිවිය හැක.</string>
    <string name="para3_15_17">ආහාර අජීර්ණය</string>
    <string name="para3_15_18">බර හෝ සැර ආහාර වේලක් ගත් පසුව බඩේ ඉහල කොටසේ ඇතිවන වේදනාව.හෝ බඩ පිපුණු ස්වභාවයක්,සමහර විට උගුර දෙසට දැවිල්ල ගතියක් ඇතිවිය හැක.ඔක්කාරය හෝ උගුරට එන ගතියක් ද ඇත.</string>
    <string name="headr5_3">පවුල් සැලසුම් ක්‍රම</string>
    <string name="headr5_4"><u>නෝ ප්ලාන්ට් පවුල් සැලසුම් ක්‍රමය</u></string>
    <string name="headr5_5"><u>ගිලින පෙති</u></string>
    <string name="abut5_4_1">පවූල් සැලසුම් ක්‍රම අතරින් වඩාත්ම ජනප්‍රිය වෙමින් පවතින නෝ ප්ලාන්ට් ක්‍රමය දිර්ග කාලයකට දරුවකු බලාපොරොත්තු නොවන මව් වරුන්ට බෙහෙවින් ප්‍රයෝජන ක්‍රමයකි. සෙ.මි.3.4ක් පමණ දිග පුංචි ප්ලාස්ටික් කරල් හයක් කාන්තාවන්ගේ අතෙහි උඩ බාහුවෙහි සමට යටින් වටාපතක් හැඩයෙන් යුතුව තැන්පත් කෙරේ.මේ සදහා විනාඩි 5 – 10 ක කාලයක සැත්කමකින් පසු සිදු කරයි.සැත්කම් තුවාලය මත යෙදූ වෙළුම් දින 3කදී ඉවත් කළ හැකි අතර සතියකට පසු සායනයට ගොස් තුවාලය පරීක්‍ෂා කර ගත යුතුය.</string>
    <string name="abut5_4_2">නෝ ප්ලාන්ට් කරල් තැන්පතු මගින් අවරුදු 5ක උපත් පාලන හැකියාවක් පවති.මේ කාලය අතර තුර වරින් වර සායනයට ගොස් පරීක්‍ෂා කර ගන්නේ නම් ඉතා හොදය.</string>
    <string name="abut5_4_3">නෝ ප්ලාන්ට් කරල් තැන්පතු මගින් අතුරු ආබාධ අඩුය.තිබුනත් එය තාව කලිකය.මාස ශුද්දිය වැඩි දින ගණනක් තිබීම, මාස ශුද්දිය ඇති නොවීම, මාස ශුද්දිය වෙනස් වීම,  බර වැඩිවීම, හිසකෙස් යාම වැනි තත්වයන් මේ අතර වේ.</string>
    <string name="abut5_4_4">අවරුදු 5 ගෙවූනු පසු වෛද්‍යවරයෙකු ලවා පුංචි සැත් කමකින් හිස් වූ කරල් එලියට ගත යුතු වේ. අවශ්‍යනම් නැවත කරල් ඇතුලත් කර ගත හැකි වේ.</string>
    <string name="abut5_5_1">පවූල් සැලසුම් ක්‍රමයක් ලෙස ගිලින පෙති භාවිතය ඉතා සාර්ථකය.දී ඇති උපදෙස් නිසි ලෙස පිලිපදිනු ලබුහොත් දරු පිලිසිදීම වැලැක්වීම 100% ක් සාර්ථකය.</string>
    <string name="abut5_5_2">එය ගැනීම ඉතා පහසුය.ඔබට ලැබෙන බුබුළු ඇසුරුමෙහි කුඩා සුදු පෙති 21 හා රෝස පෙති 7 ක් වශයෙන් පෙති 28කි.පළමු සුදු පෙත්ත ඔසප් අරබුනදා ( ඔසප් චක්‍රයේ ප්‍රථම දිනයදී )ගන්න.එදින පටන් නොකඩවාම දිනකට එක බැගින් සුදු පෙති 7 ගන්න.රෝස පෙති ගන්න විට ඔසප් වීම සිදු වුනද පෙති ගැනීම නතර නොකරන්න.පෙති 28 ම දින 28 ගන්න.මුල් පැකට්ටුවේ පෙති ඉවර වූ පසු ඊලග දිනයේදී( 29 වන දිනයේ )අලුත් ඇසරුමකින් පළමු සුදු පෙත්ත ගැනීම ආරම්භ කරන්න.මෙය දිනයේ එකම වෙලාවක ගැනීමට හුරු වුවහොත් එය පහසුය.මෙසේ පෙති ගන්න තාක් ඔබට දරු පිළිසිද ගැනීමක් ඇති නොවේ.</string>
    <string name="abut5_5_3">ගිලින පෙති ගන්නා විට...</string>
    <string name="abut5_5_4">•	තද හෝ කල් පවතින බඩේ රිදීමක්\n
•	පපුවේ රිදීමක්\n
•	හුස්ම ගැනීමේ අපහසුවක්\n
•	අත්වල රිදීමක්\n
•	තදබල දෙපා රිදීමක් හෝ ඉදිමීමක්\n
</string>
</resources>