<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/blue_fade"
    tools:context="ammaibabai.universl.com.ammaibabai.header_3.Header3_15Activity">

    <android.support.v7.widget.Toolbar
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/toolbarshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        >
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/textHeader"
                android:layout_height="50dp"
                android:text="@string/heade3_15"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:gravity="center"
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/txtClose"
                android:layout_marginStart="22dp" />
            <TextView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/txtClose"
                android:background="@drawable/backing"
                android:textColor="@color/colorWhite"
                android:layout_alignParentTop="true"
                />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="fill_parent"
            android:orientation="vertical"
            android:layout_height="fill_parent">

            <TextView
                android:layout_marginTop="5dp"
                style="@style/btn_style"
                android:text="@string/para3_15_1"/>

            <TextView
                android:layout_marginTop="10dp"
                style="@style/btn_style"
                android:textStyle="bold"
                android:text="@string/para3_15_3"/>

            <ImageView
                android:layout_marginTop="2dp"
                android:layout_gravity="center"
                android:layout_width="190dp"
                android:layout_height="170dp"
                android:background="@drawable/th_fiteen_o"
                />
            <TextView
                android:layout_marginTop="5dp"
                style="@style/btn_style"
                android:textStyle="italic"
                android:gravity="center"
                android:text="@string/para3_15_4"/>

            <TextView
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                style="@style/btn_style"
                android:text="@string/para3_15_5"/>

            <ImageView
                android:layout_marginTop="2dp"
                android:layout_gravity="center"
                android:layout_width="190dp"
                android:layout_height="170dp"
                android:background="@drawable/th_fiteen_t"
                />
            <TextView
                android:textStyle="italic"
                android:gravity="center"
                android:layout_marginTop="5dp"
                style="@style/btn_style"
                android:text="@string/para3_15_6"/>

            <TextView
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                style="@style/btn_style"
                android:text="@string/para3_15_7"/>

            <ImageView
                android:layout_marginTop="2dp"
                android:layout_gravity="center"
                android:layout_width="190dp"
                android:layout_height="170dp"
                android:background="@drawable/th_fiteen_th"
                />
            <TextView
                android:layout_marginTop="5dp"
                android:textStyle="italic"
                android:gravity="center"
                style="@style/btn_style"
                android:text="@string/para3_15_8"/>

            <TextView
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                style="@style/btn_style"
                android:text="@string/para3_15_9"/>

            <ImageView
                android:layout_marginTop="2dp"
                android:layout_gravity="center"
                android:layout_width="190dp"
                android:layout_height="170dp"
                android:background="@drawable/th_fiteen_five"
                />
            <TextView
                android:textStyle="italic"
                android:gravity="center"
                android:layout_marginTop="5dp"
                style="@style/btn_style"
                android:text="@string/para3_15_10"/>

            <TextView
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                style="@style/btn_style"
                android:text="@string/para3_15_11"/>

            <ImageView
                android:layout_marginTop="2dp"
                android:layout_gravity="center"
                android:layout_width="190dp"
                android:layout_height="170dp"
                android:background="@drawable/th_fiteen_four"
                />
            <TextView
                android:textStyle="italic"
                android:gravity="center"
                android:layout_marginTop="5dp"
                style="@style/btn_style"
                android:text="@string/para3_15_12"/>

            <TextView
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                style="@style/btn_style"
                android:text="@string/para3_15_13"/>

            <ImageView
                android:layout_marginTop="2dp"
                android:layout_gravity="center"
                android:layout_width="190dp"
                android:layout_height="170dp"
                android:background="@drawable/th_fiteen_five"
                />
            <TextView
                android:textStyle="italic"
                android:gravity="center"
                android:layout_marginTop="5dp"
                style="@style/btn_style"
                android:text="@string/para3_15_14"/>

            <TextView
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                style="@style/btn_style"
                android:text="@string/para3_15_15"/>

            <ImageView
                android:layout_marginTop="2dp"
                android:layout_gravity="center"
                android:layout_width="190dp"
                android:layout_height="170dp"
                android:background="@drawable/th_fiteen_six"
                />
            <TextView
                android:textStyle="italic"
                android:gravity="center"
                android:layout_marginTop="5dp"
                style="@style/btn_style"
                android:text="@string/para3_15_16"/>

            <TextView
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                style="@style/btn_style"
                android:text="@string/para3_15_17"/>

            <ImageView
                android:layout_marginTop="2dp"
                android:layout_gravity="center"
                android:layout_width="190dp"
                android:layout_height="170dp"
                android:background="@drawable/th_fiteen_seven"
                />
            <TextView
                android:textStyle="italic"
                android:gravity="center"
                android:layout_marginTop="5dp"
                style="@style/btn_style"
                android:text="@string/para3_15_18"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:gravity="center" >

                <ImageButton
                    android:id="@+id/previousButton"
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:background="@drawable/button_small"
                    android:src="@drawable/ic_previous" />

                <ImageButton
                    android:id="@+id/nextButton"
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:visibility="invisible"
                    android:background="@drawable/button_small"
                    android:src="@drawable/ic_next" />
            </LinearLayout>

        </android.support.v7.widget.LinearLayoutCompat>
    </ScrollView>



</LinearLayout>
