<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_fade"
    android:orientation="vertical"
    tools:context="ammaibabai.universl.com.ammaibabai.header_5.Header5_3Activity">

    <android.support.v7.widget.Toolbar
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/toolbarshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        >
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/textHeader"
                android:layout_height="50dp"
                android:text="@string/headr5_3"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:gravity="center"
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/txtClose"
                android:layout_marginStart="22dp" />
            <TextView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/txtClose"
                android:background="@drawable/backing"
                android:textColor="@color/colorWhite"
                android:layout_alignParentTop="true"
                />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="fill_parent"
            android:orientation="vertical"
            android:layout_height="fill_parent">

            <TextView
                android:layout_marginTop="5dp"
                style="@style/btn_style"
                android:text="@string/headr5_4"/>

            <TextView
                android:layout_marginTop="10dp"
                style="@style/btn_style"
                android:text="@string/abut5_4_1"/>

            <TextView
                android:layout_marginTop="10dp"
                style="@style/btn_style"
                android:text="@string/abut5_4_2"/>

            <TextView
                android:layout_marginTop="10dp"
                style="@style/btn_style"
                android:text="@string/abut5_4_3"/>

            <TextView
                android:layout_marginTop="10dp"
                style="@style/btn_style"
                android:text="@string/abut5_4_4"/>


            <ImageView
                android:layout_marginTop="10dp"
                android:layout_width="350dp"
                android:layout_height="350dp"
                android:layout_gravity="center"
                android:background="@drawable/five_five_one"/>

            <TextView
                android:layout_marginTop="10dp"
                style="@style/btn_style"
                android:text="@string/headr5_5"/>

            <TextView
                android:layout_marginTop="8dp"
                style="@style/btn_style"
                android:text="@string/abut5_5_1"/>
            <TextView
                android:layout_marginTop="10dp"
                style="@style/btn_style"
                android:text="@string/abut5_5_2"/>
            <TextView
                android:layout_marginTop="10dp"
                style="@style/btn_style"
                android:text="@string/abut5_5_3"/>
            <TextView
                android:layout_marginTop="5dp"
                style="@style/btn_style"
                android:layout_marginLeft="15dp"
                android:text="@string/abut5_5_4"/>

            <ImageView
                android:layout_marginTop="10dp"
                android:layout_width="320dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_height="280dp"
                android:layout_gravity="center"
                android:background="@drawable/pethi"/>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:gravity="center" >

                <ImageButton
                    android:id="@+id/previousButton"
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:background="@drawable/button_small"
                    android:src="@drawable/ic_previous" />

                <ImageButton
                    android:id="@+id/nextButton"
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:visibility="invisible"
                    android:background="@drawable/button_small"
                    android:src="@drawable/ic_next" />
            </LinearLayout>

        </android.support.v7.widget.LinearLayoutCompat>
    </ScrollView>




</LinearLayout>
