<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/blue_fade"
    tools:context="ammaibabai.universl.com.ammaibabai.Header1Activity">

    <android.support.v7.widget.Toolbar
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/toolbarshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        >
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/textHeader"
                android:layout_height="50dp"
                android:text="@string/heade1"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:gravity="center"
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/txtClose"
                android:layout_marginStart="22dp" />
            <TextView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/txtClose"
                android:background="@drawable/backing"
                android:textColor="@color/colorWhite"
                android:layout_alignParentTop="true"
                />

        </RelativeLayout>
    </android.support.v7.widget.Toolbar>
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="fill_parent"
            android:orientation="vertical"
            android:layout_height="fill_parent">
            <Button
                android:id="@+id/btn1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_height="58dp"
                android:text="@string/heade1_1"
                android:gravity="center"
                style="@style/button_style"
                android:layout_marginTop="30dp"/>

            <Button
                android:id="@+id/btn2"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_height="58dp"
                android:text="@string/heade1_2"
                android:gravity="center"
                style="@style/button_style"
                android:layout_marginTop="30dp"/>

            <Button
                android:id="@+id/btn3"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_height="58dp"
                android:text="@string/heade1_3"
                android:gravity="center"
                style="@style/button_style"
                android:layout_marginTop="30dp"/>

            <Button
                android:id="@+id/btn4"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_height="58dp"
                android:text="@string/heade1_4"
                android:gravity="center"
                style="@style/button_style"
                android:layout_marginTop="30dp"/>

            <Button
                android:id="@+id/btn5"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_height="58dp"
                android:text="@string/heade1_5"
                android:gravity="center"
                style="@style/button_style"
                android:layout_marginTop="30dp"/>

            <Button
                android:id="@+id/btn6"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_height="58dp"
                android:text="@string/heade1_6"
                android:gravity="center"
                style="@style/button_style"
                android:layout_marginTop="30dp"/>

            <Button
                android:id="@+id/btn7"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_height="58dp"
                android:text="@string/heade1_7"
                android:gravity="center"
                style="@style/button_style"
                android:layout_marginTop="30dp"/>

            <Button
                android:id="@+id/btn8"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_height="58dp"
                android:text="@string/heade1_8"
                android:gravity="center"
                style="@style/button_style"
                android:layout_marginTop="30dp"/>




        </android.support.v7.widget.LinearLayoutCompat>
    </ScrollView>


</LinearLayout>
